# merutable

./: .gitignore  Cargo.toml  DEVELOPER.md  README.md
crates/merutable/: Cargo.toml  build.rs
crates/merutable-cluster/: Cargo.toml  build.rs
crates/merutable-cluster/proto/: cluster.proto  raft_transport.proto
crates/merutable-cluster/src/: config.rs  lib.rs  observability.rs  proto_convert.rs
crates/merutable-cluster/src/harness/: mod.rs  node.rs  routing.rs
crates/merutable-cluster/src/io/: mod.rs  uring_log.rs
crates/merutable-cluster/src/metadata/: cache.rs  mod.rs  raft_group.rs  state_machine.rs
crates/merutable-cluster/src/raft/: disk_storage.rs  group.rs  in_memory_storage.rs  mod.rs  network.rs  store_parts.rs  types.rs
crates/merutable-cluster/src/ring/: mod.rs  per_az.rs
crates/merutable-cluster/src/rpc/: client.rs  mod.rs  raft_server.rs  server.rs
crates/merutable-cluster/src/table/: mod.rs  state_machine.rs
crates/merutable-cluster/tests/: integration.rs
crates/merutable-engine/: Cargo.toml
crates/merutable-engine/benches/: compaction.rs
crates/merutable-engine/src/: background.rs  cache.rs  codec.rs  config.rs  engine.rs  flush.rs  lib.rs  metrics.rs  read_path.rs  stats.rs  write_path.rs
crates/merutable-engine/src/compaction/: iterator.rs  job.rs  mod.rs  picker.rs
crates/merutable-engine/tests/: auto_flush_regression.rs  background_worker_drop.rs  cross_level_stress.rs  export_iceberg_pin.rs  ghost_rows_turbo.rs  htap_external_reader.rs  imp_regression.rs  issue35_delete_visibility.rs  issue37_scan_gc_race.rs  l1_overlap_regression.rs  metrics_phase2.rs  post_flush_read_path.rs  wal_orphan_registration.rs  wal_rotation_gc.rs
crates/merutable-iceberg/: Cargo.toml
crates/merutable-iceberg/proto/: manifest.proto
crates/merutable-iceberg/src/: catalog.rs  deletion_vector.rs  head_discovery.rs  lib.rs  manifest.rs  manifest_pb.rs  object_store_catalog.rs  object_store_commit.rs  snapshot.rs  translate.rs  version.rs
crates/merutable-iceberg/tests/: column_stats_e2e.rs  forensic_catalog.rs
crates/merutable-memtable/: Cargo.toml
crates/merutable-memtable/benches/: memtable.rs
crates/merutable-memtable/src/: arena.rs  iterator.rs  lib.rs  manager.rs  memtable.rs  skiplist.rs
crates/merutable-migrate/: Cargo.toml
crates/merutable-migrate/src/: main.rs
crates/merutable-parquet/: Cargo.toml
crates/merutable-parquet/benches/: bloom.rs
crates/merutable-parquet/src/: bloom.rs  codec.rs  footer.rs  kv_index.rs  lib.rs  reader.rs  writer.rs
crates/merutable-parquet/tests/: forensic_parquet.rs
crates/merutable-python/: Cargo.toml  pyproject.toml
crates/merutable-python/src/: convert.rs  lib.rs
crates/merutable-replica/: Cargo.toml
crates/merutable-replica/src/: lib.rs
crates/merutable-replica/tests/: in_process_log_source.rs  log_gap_recovery.rs  rebase_hotswap_bounded.rs  replica_compose.rs  replica_tail.rs
crates/merutable-sql/: Cargo.toml
crates/merutable-sql/src/: arrow.rs  datafusion_provider.rs  lib.rs
crates/merutable-sql/tests/: issue36_cursor_buffering.rs  phase1_api_shape.rs  phase2a_memtable.rs  phase2b_l0_scan.rs  phase2c_pre_image.rs
crates/merutable-store/: Cargo.toml
crates/merutable-store/src/: cached.rs  local.rs  s3.rs  traits.rs
crates/merutable-types/: Cargo.toml
crates/merutable-types/src/: error.rs  key.rs  level.rs  schema.rs  sequence.rs  value.rs
crates/merutable-types/tests/: proptest_key.proptest-regressions  proptest_key.rs
crates/merutable-wal/: Cargo.toml
crates/merutable-wal/src/: batch.rs  manager.rs  reader.rs  writer.rs
crates/merutable-wal/tests/: forensic_wal.rs
crates/merutable/benches/: memtable_memtable.rs  parquet_bloom.rs
crates/merutable/proto/: manifest.proto
crates/merutable/src/: db.rs  error.rs  iterator.rs  lib.rs  mirror.rs  options.rs
crates/merutable/src/engine/: background.rs  cache.rs  codec.rs  config.rs  engine.rs  flush.rs  metrics.rs  mod.rs  read_path.rs  stats.rs  write_path.rs
crates/merutable/src/engine/compaction/: iterator.rs  job.rs  picker.rs
crates/merutable/src/iceberg/: catalog.rs  deletion_vector.rs  head_discovery.rs  manifest.rs  manifest_pb.rs  mod.rs  object_store_catalog.rs  object_store_commit.rs  snapshot.rs  translate.rs  version.rs
crates/merutable/src/memtable/: iterator.rs  manager.rs  memtable.rs  mod.rs  skiplist.rs
crates/merutable/src/parquet/: bloom.rs  codec.rs  footer.rs  kv_index.rs  reader.rs  writer.rs
crates/merutable/src/replica/: mod.rs
crates/merutable/src/sql/: arrow.rs  datafusion_provider.rs  mod.rs
crates/merutable/src/store/: cached.rs  local.rs  mod.rs  s3.rs  traits.rs
crates/merutable/src/types/: key.rs  level.rs  mod.rs  schema.rs  value.rs
crates/merutable/src/wal/: batch.rs  format.rs  manager.rs  mod.rs  reader.rs  writer.rs
crates/merutable/tests/: commit_mode_phase1.rs  engine_auto_flush_regression.rs  engine_background_worker_drop.rs  engine_cross_level_stress.rs  engine_export_iceberg_pin.rs  engine_external_reader.rs  engine_ghost_rows_turbo.rs  engine_htap_external_reader.rs  engine_imp_regression.rs  engine_issue35_delete_visibility.rs  engine_issue37_scan_gc_race.rs  engine_issue39_concurrent_ghost.rs  engine_issue39_concurrent_ghost_large.rs  engine_l1_overlap_regression.rs  engine_metrics_phase2.rs  engine_post_flush_read_path.rs  engine_wal_orphan_registration.rs  engine_wal_rotation_gc.rs  iceberg_column_stats_e2e.rs  iceberg_forensic_catalog.rs  issue42_schema_mismatch_on_reopen.rs  issue44_add_column_api.rs  issue44_additive_evolution_reads.rs  parquet_forensic_parquet.rs  replica_in_process_log_source.rs  replica_log_gap_recovery.rs  replica_rebase_hotswap_bounded.rs  replica_replica_compose.rs  replica_replica_tail.rs  sql_issue36_cursor_buffering.rs  sql_phase1_api_shape.rs  sql_phase2a_memtable.rs  sql_phase2b_l0_scan.rs  sql_phase2c_pre_image.rs  types_proptest_key.rs  wal_forensic_wal.rs
deploy/: README.md
docs/: EXTERNAL_READS.md  HTAP_READS.md  LESSONS.md  MIRROR.md  PHASE1_RAFT_CLUSTER.md  REVIEW_SCRATCHPAD.md  SCALE_OUT_REPLICA.md  (+3 more)
(+30 files in other folders)
