[package]
name    = "merutable-engine"
version = "0.1.0"
edition = "2021"
description = "Flush pipeline, read path, compaction, and engine orchestration for merutable"

[dependencies]
merutable-types    = { workspace = true }
merutable-wal      = { workspace = true }
merutable-memtable = { workspace = true }
merutable-parquet  = { workspace = true }
merutable-iceberg  = { workspace = true }
merutable-store    = { workspace = true }
object_store       = { workspace = true }
bytes              = { workspace = true }
tokio              = { workspace = true }
futures            = { workspace = true }
tracing            = { workspace = true }
thiserror          = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
postcard           = { workspace = true }
uuid               = { workspace = true }
arc-swap           = { workspace = true }
lru                = { workspace = true }
roaring            = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }
tempfile  = { workspace = true }
tokio     = { workspace = true, features = ["full"] }
parquet   = { workspace = true }
arrow     = { workspace = true }

[[bench]]
name    = "compaction"
harness = false
