[package]
name    = "merutable-memtable"
version = "0.1.0"
edition = "2021"
description = "Lock-free skip-list memtable with arena allocator for merutable"
publish = false  # internal crate — not a stable API surface; only `merutable` is published

[dependencies]
metrics              = { workspace = true }
merutable-types    = { workspace = true }
merutable-wal      = { workspace = true }
crossbeam-skiplist = { workspace = true }
bumpalo            = { workspace = true }
bytes              = { workspace = true }
tracing            = { workspace = true }
tokio              = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }

[[bench]]
name    = "memtable"
harness = false
