[package]
name    = "merutable-migrate"
version = "0.1.0"
edition = "2021"
description = "CLI tool for migrating merutable deployments between commit-mode layouts (Issue #27)"
publish = false  # internal tool — distributed as a release artifact, not a library

[[bin]]
name = "merutable-migrate"
path = "src/main.rs"

[dependencies]
merutable             = { path = "../merutable" }
merutable-engine      = { path = "../merutable-engine" }
merutable-iceberg     = { path = "../merutable-iceberg" }
merutable-types       = { path = "../merutable-types" }
clap                  = { version = "4", features = ["derive"] }
tokio                 = { workspace = true, features = ["full"] }
tracing               = { workspace = true }
tracing-subscriber    = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = { workspace = true }
