[package]
name    = "merutable-parquet"
version = "0.1.0"
edition = "2021"
description = "Parquet SSTable layer with SIMD bloom filter for merutable"

[dependencies]
merutable-types = { workspace = true }
parquet         = { workspace = true }
arrow           = { workspace = true }
arrow-array     = { workspace = true }
arrow-schema    = { workspace = true }
bytes           = { workspace = true }
xxhash-rust     = { workspace = true }
once_cell       = { workspace = true }
roaring         = { workspace = true }
tracing         = { workspace = true }
thiserror       = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
hex             = { workspace = true }

[dev-dependencies]
proptest  = { workspace = true }
criterion = { workspace = true }
tempfile  = { workspace = true }

[[bench]]
name    = "bloom"
harness = false
