[package]
name    = "merutable-replica"
version = "0.1.0"
edition = "2021"
description = "Scale-out RO replica: object-store base + log-replayed tail with hot-swap rebase (Issue #32)"
publish = false  # internal; stable surface follows the full rebase + hot-swap implementation.

[dependencies]
merutable          = { path = "../merutable" }
merutable-engine   = { path = "../merutable-engine" }
merutable-types    = { path = "../merutable-types" }
merutable-sql      = { path = "../merutable-sql" }
async-trait        = { workspace = true }
futures            = { workspace = true }
tokio              = { workspace = true }
tracing            = { workspace = true }
thiserror          = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio    = { workspace = true, features = ["full"] }
