[package]
name    = "merutable-store"
version = "0.1.0"
edition = "2021"
description = "Pluggable object store abstraction: local, S3, and LRU-cached for merutable"

[dependencies]
merutable-types = { workspace = true }
object_store    = { workspace = true }
bytes           = { workspace = true }
tokio           = { workspace = true }
tracing         = { workspace = true }
thiserror       = { workspace = true }
lru             = { workspace = true }
blake3          = { workspace = true }
async-trait     = { workspace = true }
futures         = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio    = { workspace = true, features = ["full"] }
