[package]
name    = "merutable-types"
version = "0.1.0"
edition = "2021"
description = "Core types, error handling, schema, and internal key encoding for merutable"
publish = false  # internal crate — not a stable API surface; only `merutable` is published

[dependencies]
bytes      = { workspace = true }
thiserror  = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
hex        = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
