[package]
name    = "merutable-wal"
version = "0.1.0"
edition = "2021"
description = "Write-ahead log: writer, reader, recovery, and manager for merutable"
publish = false  # internal crate — not a stable API surface; only `merutable` is published

[dependencies]
merutable-types = { workspace = true }
bytes           = { workspace = true }
crc32fast       = { workspace = true }
tokio           = { workspace = true }
tracing         = { workspace = true }
thiserror       = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tempfile = { workspace = true }
tokio    = { workspace = true, features = ["full"] }
