[package]
name    = "merutable"
version = "0.1.0"
edition = "2021"
description = "Embeddable HTAP database: LSM-tree over Apache Iceberg and Parquet"
keywords    = ["database", "lsm", "iceberg", "parquet", "htap"]
license     = "Apache-2.0"

[dependencies]
metrics  = { workspace = true }
merutable-types  = { workspace = true }
merutable-engine = { workspace = true }
merutable-store  = { workspace = true }
tokio            = { workspace = true }
futures          = { workspace = true }
tracing          = { workspace = true }
serde            = { workspace = true }
bytes            = { workspace = true }

[dev-dependencies]
tempfile           = { workspace = true }
tokio              = { workspace = true, features = ["full"] }
tracing-subscriber = "0.3"
# Used only by the Iceberg translator compatibility test — parses our
# exported `metadata.json` back into a `TableMetadata` struct to pin
# spec compliance.
iceberg            = { workspace = true }
serde_json         = { workspace = true }
